2003-11-11  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/gda-command.[ch] (gda_command_get_type, gda_command_copy):
	* libgda/gda-field.[ch] (gda_field_attributes_get_type):
	* libgda/gda-parameter.[ch] (gda_parameter_get_type, gda_parameter_copy,
	gda_parameter_list_get_type, gda_parameter_list_copy):
	* libgda/gda-quark-list.[ch] (gda_quark_list_get_type, 
	gda_quark_list_copy):
	* libgda/gda-row.[ch] (gda_row_get_type, gda_row_copy):
	* libgda/gda-value.[ch] (gda_value_get_gtype):
	Added missing *_get_type and *_copy functions.

2003-11-03  Jonathan Blandford <jrb@redhat.com>

	* libsql/lexer.l: #undef L_SET, since it might be defined when
	enabling the BSD compatibility layer on Linux.

2003-10-26  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/gda-data-model.c (gda_data_model_to_xml):
	Implemented the standalone=FALSE case.

2003-10-19  Laurent Sansonetti <laurent@datarescue.be>

	* doc/C/examples/full_example.c:
	Fixed compilation issues (was broken).

2003-10-18  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/*.c:
	* doc/C/tmpl/*.sgml:
	Added some missing entries in the API reference, and fixed existing
	ones.

2003-10-16  Paisa Seeluagnsawat <paisa@users.sf.net>

	* provider/mysql/gda-mysql-recordset.c: fixed possible memory
	leak in fetch_row() by moving gda_row_new() a few lines down.

2003-10-14  Murray Cumming  <murrayc@usa.net>

	* libgda/gda-config.[h|c]: Register GdaProviderInfo and 
	GdaDataSourceInfo boxed gtypes, with copy and free functions. Useful
	for language bindings.

2003-10-12  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.0.1

2003-10-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/Makefile.am: fixed enum code generation.

2003-10-11  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/tmpl/gda-blob.sgml: added missing file.

2003-10-11  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #123342

	* libgda/gda-client.c (gda_client_close_all_connections): remove
	connections from the list before closing them.